Add output a message to the HTML for all three JavaScript features

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
   <body>
     <h1>Mohsen Qaddoura</h1>
     <h2>Using Babel</h2>
-    <div class="output"></div>
+    <hr />
+    <div id="promise-output" class="output"></div>
+    <div id="async-output" class="output"></div>
+    <div id="destructuring-output" class="output"></div>
+    <hr />
     <div>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, doloribus
       numquam voluptate dolore suscipit officiis obcaecati maxime placeat
